# dotenv-encrypt

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.github/workflows/: python-publish.yml  tests.yml
src/dotenv_encrypt/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
